# pitchdeck-maker

./: example-deck.md  gemini-example.py  generate_deck.py  pyproject.toml  readme.md  requirements.txt
.claude/: settings.local.json
generate_deck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
